# SkyrimNet-Baka-Integration-NSFW-Interactions

./: .gitattributes  .gitignore  .gitmodules  README.md  RELEASE_NOTES_v1.9.0.md  RELEASE_NOTES_v1.9.1.md  SkyrimNet_BakaIntegration.esp
PrismaUI/views/SNBaka_Menu/: index.html
SKSE/Plugins/: SNBaka_Offsets.ini
SKSE/Plugins/SkyrimNet/config/actions/: arm_hold.yaml  back_hug.yaml  back_hug_molest.yaml  call_off.yaml  captured_inspect.yaml  cat_display.yaml  cat_expression.yaml  cat_grab.yaml  cat_intimate.yaml  cat_scene.yaml  cat_spanking.yaml  choke_hug.yaml  drug_food.yaml  drunk_exploit.yaml  escalate.yaml  examine_privates.yaml  express_afraid.yaml  express_angry.yaml  express_confused.yaml  express_happy.yaml  express_pained.yaml  express_sad.yaml  express_surprised.yaml  flirt.yaml  flirt_breast.yaml  flirt_face.yaml  flirt_pussy.yaml  fondle_privates.yaml  forced_kiss.yaml  front_hug.yaml  interrupt_scene.yaml  investigate.yaml  kiss_love.yaml  oral_on_target.yaml  play_privates.yaml  pose_aroused.yaml  pose_autograph.yaml  pose_bracearm.yaml  pose_casual.yaml  pose_confident.yaml  (+25 more)
SKSE/Plugins/SkyrimNet/config/triggers/: baka_calloff.yaml  baka_defeat.yaml  baka_escalate.yaml  baka_interaction_end.yaml  baka_interaction_start.yaml  baka_intervention.yaml  baka_opportunity.yaml  baka_panic.yaml  baka_resist_fail.yaml  baka_resist_start.yaml  baka_resist_success.yaml  baka_sexlab_trigger.yaml  sdb_slapped.yaml  sdb_spanked.yaml
SKSE/Plugins/SkyrimNet/prompts/submodules/character_bio/: 0610_sdb_spank_state.prompt  0620_baka_state.prompt
SKSE/Plugins/SkyrimNet/prompts/submodules/system_head/: 0611_sdb_nearby_context.prompt  0621_baka_context.prompt
Scripts/: SNBakaUI.pex  SkyrimNet_BakaEscalateEffect.pex  SkyrimNet_BakaInteg_BreastReaction_ME.pex  SkyrimNet_BakaInteg_ButtReaction_ME.pex  SkyrimNet_BakaInteg_ModestyEffect.pex  SkyrimNet_BakaInteg_Native.pex  SkyrimNet_BakaInteg_SpankPartner.pex  SkyrimNet_BakaIntegration.pex  SkyrimNet_BakaIntegration_MCM.pex  SkyrimNet_BakaInteractEffect.pex
Scripts/Source/: SNBakaUI.psc  SkyrimNet_BakaEscalateEffect.psc  SkyrimNet_BakaInteg_BreastReaction_ME.psc  SkyrimNet_BakaInteg_ButtReaction_ME.psc  SkyrimNet_BakaInteg_ModestyEffect.psc  SkyrimNet_BakaInteg_Native.psc  SkyrimNet_BakaInteg_SpankPartner.psc  SkyrimNet_BakaIntegration.psc  SkyrimNet_BakaIntegration_MCM.psc  SkyrimNet_BakaInteractEffect.psc
SlaveTats/: skyrimnet_spank.json
Sound/fx/SkyrimNet_SDB/: ButtSlap.xwm
dll-source/: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  build_plugin.bat  vcpkg-configuration.json  vcpkg.json
dll-source/cmake/: CompilerFlags.cmake  commonlibsse.cmake
dll-source/include/: PrismaUI_API.h
dll-source/src/: PapyrusFunctions.cpp  PapyrusFunctions.h  Plugin.cpp  PrismaUIBridge.cpp  PrismaUIBridge.h  SkyrimNetBridge.cpp  SkyrimNetBridge.h
fomod-src/: README.md  build-fomod.sh
fomod-src/fomod/: ModuleConfig.xml  info.xml
fomod-src/plugin-vr/SKSE/Plugins/: HOW_TO_GET_VR_DLL.txt
meshes/actors/character/animations/SkyrimNet_SDB/: ButtslapFemale.hkx  ButtslapMale.hkx  FNIS_SkyrimNet_SDB_List.txt  SMplayerslaps.hkx  Sta_slap_backward.hkx  Sta_slap_forward.hkx
textures/actors/character/SlaveTats/: blank.dds  skyrimnet_spank.json  sta_spanky.json
